--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-word2vec-reader",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Word2vec Model Reader for node client",
   "main": "app/index.js",
   "scripts": {
@@ -28,6 +28,10 @@
     "ava": "^0.25.0"
   },
   "dependencies": {
-    "bindings": "^1.3.0"
+    "bindings": "^1.3.0",
+    "debug": "^3.1.0",
+    "lodash": "^4.17.5",
+    "nan": "^2.8.0",
+    "q": "^1.5.1"
   }
 }
